--- a/department-service.properties
+++ b/department-service.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.format_sql=true
 ## Within Application.Properties file, we are going to configure Eureka Server.
 
 eureka.instance.client.serverUrl.defaultZone =   http://localhost:8761/eureka/
+
+spring.boot.message = Hello, Department Service
